
syntax = "proto3";

package auth;

service UserService {
  rpc GetUserRoleById (UserId) returns (UserRole) {}
}

message UserId {
  string id = 1;
}

message UserRole {
  string id = 1;
  string role = 2;
  repeated string permissions = 3;
}